@startuml model
!include ./commons.style

title "jPipe Domain Model"

class Unit {
    + fileName: String
}

Unit *--> "1..*" Justification

class Justification implements Visitable {
    + name: String
}

Justification --> "1\nconclusion" Conclusion
Justification *-> "symbols\n*" JustificationElement

abstract class JustificationElement implements Visitable {
    + id: Symbol
    + label: String
}

class Conclusion extends JustificationElement

Conclusion -> "1\nstrategy" Strategy

class Strategy extends JustificationElement

Strategy -> "1..*\nsupports" Support

abstract class Support extends JustificationElement

class Evidence extends Support

class SubConclusion extends Support

Strategy "1\nstrategy" <-- SubConclusion

interface Visitable {
    + accept(v: ModelVisitor)

}

@enduml